Incluido navegacao por paginas

--- a/Views/Pages/CadastroVeiculoPage.xaml
+++ b/Views/Pages/CadastroVeiculoPage.xaml
@@ -9,6 +9,6 @@
       Title="CadastroVeiculo">
 
     <Grid>
-        
+        <TextBlock Text="teste" HorizontalAlignment="center" VerticalAlignment="Center" FontSize="40" FontFamily="ubuntu" Foreground="AliceBlue" Background="Blue"/>
     </Grid>
 </Page>
